--- a/src/components/product-card/product-card-style.css
+++ b/src/components/product-card/product-card-style.css
@@ -3,7 +3,7 @@
 }
 
 .product-card{
-    width: 260px;
+    width: 275px;
     float: none;
     padding: 16px;
     height: 95%;
@@ -12,6 +12,7 @@
     margin: 0 0.50%;
     display: inline-block;
     zoom: 1;
+    cursor: pointer;
 }
 
 @media (max-width: 430px) {
@@ -34,12 +35,45 @@
 }
 
 .product-img{
-    width: 100%;
-    height: 200px;
+    width: 190px !important;
+    height: 190px;
 }
 
 .product-header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.bottom-section{
+    display: flex;
+    justify-content: space-between;
+    padding-right:  5px;
+    align-items: center;
+}
+
+.price{
+    display: flex;
+    gap: 10px;
+}
+
+.price .price-text{
+    color: var(--primary-color);
+}
+
+.add-to-cart-btn{
+    background-color: transparent;
+    color: var(--primary-color);
+    border: 2px solid var(--primary-color);
+    border-radius: 5px;
+    padding: 0 8px;
+    font-size: 25px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+
+.add-to-cart-btn:hover{
+    background-color: var(--primary-color);
+    color: white;
 }
