--- a/src/components/cards/category-card/category-card-style.css
+++ b/src/components/cards/category-card/category-card-style.css
@@ -8,7 +8,7 @@
     text-decoration: none;
     font-size: 18px;
     background-color: white;
-    color: var(--primary-color);
+    color: black;
 }
 
 @media (max-width: 995px){
